--- a/_posts/2016-05-20-Test1_fr.md
+++ b/_posts/2016-05-20-Test1_fr.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: Test 2
+title: Test 1 fr
 type: post
-lang: en
-ref: test2
+lang: fr
+ref: test1
 ---
 
 Next you can update your site name, avatar and other options using the _config.yml file in the root of your repository (shown below).
