--- a/_posts/2016-05-20-Test3.md
+++ b/_posts/2016-05-20-Test3.md
@@ -2,6 +2,8 @@
 layout: post
 title: Test 2
 type: quick
+lang: en
+ref: test3
 ---
 
 Next you can update your site name, avatar and other options using the _config.yml file in the root of your repository (shown below).
