--- a/_posts/2016-05-20-Test3_fr.md
+++ b/_posts/2016-05-20-Test3_fr.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: Test 2
-type: post
-lang: en
-ref: test2
+title: Test 2 fr
+type: quick
+lang: fr
+ref: test3
 ---
 
 Next you can update your site name, avatar and other options using the _config.yml file in the root of your repository (shown below).
