--- a/_posts/2016-05-20-Test4.md
+++ b/_posts/2016-05-20-Test4.md
@@ -2,6 +2,8 @@
 layout: post
 title: Test 1
 type: quick
+lang: en
+ref: test4
 ---
 
 Next you can update your site name, avatar and other options using the _config.yml file in the root of your repository (shown below).
