--- a/_posts/2016-05-20-Test4_fr.md
+++ b/_posts/2016-05-20-Test4_fr.md
@@ -1,9 +1,10 @@
 ---
 layout: post
-title: Test 2
-type: post
-lang: en
-ref: test2
+title: Test 1 fr
+permalink: /test1-fr/
+type: quick
+lang: fr
+ref: test4
 ---
 
 Next you can update your site name, avatar and other options using the _config.yml file in the root of your repository (shown below).
