--- a/_posts/2016-05-20-Test3_fr.md
+++ b/_posts/2016-05-20-Test3_fr.md
@@ -1,13 +1,11 @@
 ---
 layout: post
-title: Test 2 fr
+title: Test 3 fr
 type: quick
 lang: fr
 ref: test3
+permalink: /Test3-fr
 ---
 
-Next you can update your site name, avatar and other options using the _config.yml file in the root of your repository (shown below).
-
-![_config.yml]({{ site.baseurl }}/images/config.png)
-
-The easiest way to make your first post is to edit this one. Go into /_posts/ and update the Hello World markdown file. For more instructions head over to the [Jekyll Now repository](https://github.com/barryclark/jekyll-now) on GitHub.
+Post 3 in French  
+(Comme vous pouvez le voir, ce site est encore en construction)
