--- a/_posts/2016-05-20-Test1.md
+++ b/_posts/2016-05-20-Test1.md
@@ -4,7 +4,7 @@ title: Test 1
 type: post
 lang: en
 ref: test1
-permalink: /Test1
+permalink: :year/:month/:day/Test1
 img: 20160520_start.png
 ---
 
