--- a/_posts/2016-05-20-Test1_fr.md
+++ b/_posts/2016-05-20-Test1_fr.md
@@ -4,7 +4,7 @@ title: Test 1 fr
 type: post
 lang: fr
 ref: test1
-permalink: /Test1-fr
+permalink: :year/:month/:day/Test1-fr
 img: 20160520_start.png
 ---
 
