--- a/_posts/2016-05-20-Test2_fr.md
+++ b/_posts/2016-05-20-Test2_fr.md
@@ -4,7 +4,7 @@ title: Test 2 fr
 type: post
 lang: fr
 ref: test2
-permalink: /Test2-fr
+permalink: :year/:month/:day/Test2-fr
 ---
 
 Post 2 in French  
