display banner on all pages for en

--- a/_posts/2016-05-23-banner.md
+++ b/_posts/2016-05-23-banner.md
@@ -4,7 +4,7 @@ title: Banner
 type: banner
 lang: en
 ref: banner_1
-where_display: home #home or all
+where_display: all #home or all
 ---
 
 Site still under construction. Stay tune!
