fix some permalink

--- a/_posts/2016-05-20-news_Test1.md
+++ b/_posts/2016-05-20-news_Test1.md
@@ -3,7 +3,7 @@ layout: post
 title: Addon ExtraGroup is now available on version V0.0.1
 lang: en
 ref: test1
-permalink: :year/:month/:day/Test1
+permalink: /:year/:month/:day/Test1
 img: 20160520_start.png
 ---
 
