--- a/_posts/2016-05-20-news_Test2.md
+++ b/_posts/2016-05-20-news_Test2.md
@@ -3,7 +3,7 @@ layout: post
 title: Test 2
 lang: en
 ref: test2
-permalink: :year/:month/:day/Test2
+permalink: /:year/:month/:day/Test2
 ---
 
 Post 2 in English  
