--- a/_posts/2016-05-20-news_Test3.md
+++ b/_posts/2016-05-20-news_Test3.md
@@ -3,7 +3,7 @@ layout: post
 title: Test 3 with a very long title that can not fit into lastest posts
 lang: en
 ref: test3
-permalink: :year/:month/:day/Test3
+permalink: /:year/:month/:day/Test3
 img: 20160520_start.png
 ---
 
