pb with tool sort. Will now be based on date/name

--- a/_posts/2016-05-24-born.md
+++ b/_posts/2016-05-24-born.md
@@ -6,3 +6,7 @@ ref: 20160524_born
 img: None_100.png
 permalink: /:year/:month/:day/BleRiFa_is_born/
 ---
+
+It seems that this website is up!  
+You will find here (for now) Addons for Blender, related to Rigging & Animation.  
+Enjoy :)  
