add brief content into first post

--- a/_posts/2016-05-24-born_fr.md
+++ b/_posts/2016-05-24-born_fr.md
@@ -6,3 +6,7 @@ ref: 20160524_born
 img: None_100.png
 permalink: /:year/:month/:day/BleRiFa_est_ne/
 ---
+
+Et bien voilà, vous assistez à la naissance du site !  
+Vous trouverez ici (pour le moment), des Addons Blender concernant le Rigging et l'Animation.  
+Bonne découverte !  
