change img for post

--- a/_posts/2016-05-24-born_fr.md
+++ b/_posts/2016-05-24-born_fr.md
@@ -3,7 +3,7 @@ layout: post
 title: BleRiFa est né, vive BleRiFa !
 lang: fr
 ref: 20160524_born
-img: None_100.png
+img: 20160520_start.png
 permalink: /:year/:month/:day/BleRiFa_est_ne/
 ---
 
