--- a/_posts/2016-05-24-born.md
+++ b/_posts/2016-05-24-born.md
@@ -3,7 +3,7 @@ layout: post
 title: BleRiFa is born!
 lang: en
 ref: 20160524_born
-img: None_100.png
+img: 20160520_start.png
 permalink: /:year/:month/:day/BleRiFa_is_born/
 ---
 
