--- a/_banners/2016-06-11-welcome.md
+++ b/_banners/2016-06-11-welcome.md
@@ -7,4 +7,4 @@ ref: banner_1
 where_display: all #home or all
 ---
 
-Site still under construction. Stay tune! :)
+Welcome on [BleRifa]({{site.base_url}})! Discover our [tools]({{site.base_url}}/tools/).
