workaround for banner bug

--- a/_banners/2016-06-11-welcome.md
+++ b/_banners/2016-06-11-welcome.md
@@ -7,4 +7,4 @@ ref: banner_1
 where_display: all #home or all
 ---
 
-Welcome on [BleRifa]({{site.base_url}}/)! Discover our [tools]({{site.base_url}}/tools/).
+Welcome on <a href="http://BleRifa.com">BleRifa</a>! Discover our <a href="http://BleRifa.com/tools/">tools</a>.
