Use markdown links at end of file for better visibility

--- a/404.md
+++ b/404.md
@@ -7,4 +7,6 @@ lang: en
 
 # Famous 404 error :/
 Mmm... It seems that this page does'nt (or didn't) exist.  
-[Go back to homepage]({{site.base_url}}/)
+[Go back to homepage][1]
+
+[1]: {{site.base_url}}/
