--- a/404_fr.md
+++ b/404_fr.md
@@ -7,4 +7,6 @@ lang: fr
 
 # La fameuse erreur 404 :/
 Oups ... Cette page n'existe pas (ou plus).   
-[Retournez sur la page d'accueil]({{site.base_url}}/fr/)
+[Retournez sur la page d'accueil][1]
+
+[1]: {{site.base_url}}/fr/
