--- a/_quick/2016-06-02-mouth_rig.md
+++ b/_quick/2016-06-02-mouth_rig.md
@@ -6,6 +6,9 @@ ref: mouth_rig
 permalink: /:year/:month/:day/quick/Mouth-Rig/
 ---
 
-Hjalti Hjalmarsson presents on [Blender Cloud](http://cloud.blender.org) how to rig a mouth:  
+Hjalti Hjalmarsson presents on [Blender Cloud][1] how to rig a mouth:  
 
-[Mouth Rig](https://cloud.blender.org/p/glass-half/#574f04c1c379cf1b24a705a3)
+[Mouth Rig][2]
+
+[1]: http://cloud.blender.org
+[2]: https://cloud.blender.org/p/glass-half/#574f04c1c379cf1b24a705a3
