small change in 404 page

--- a/404.md
+++ b/404.md
@@ -6,7 +6,7 @@ lang: en
 ---
 
 # Famous 404 error :/
-Mmm... It seems that this page does'nt (or didn't) exist.  
+Mmm... It seems that this page does'nt exist (anymore).  
 [Go back to homepage][1]
 
 [1]: {{site.base_url}}/
