adding versioning on posts

--- a/_posts/2016-05-24-born.md
+++ b/_posts/2016-05-24-born.md
@@ -5,6 +5,7 @@ lang: en
 ref: 20160524_born
 img: 20160520_start.png
 permalink: /:year/:month/:day/BleRiFa_is_born/
+version: 1
 ---
 
 It seems that this website is up!  
