--- a/_posts/2016-05-24-born_fr.md
+++ b/_posts/2016-05-24-born_fr.md
@@ -5,6 +5,7 @@ lang: fr
 ref: 20160524_born
 img: 20160520_start.png
 permalink: /:year/:month/:day/BleRiFa_est_ne/
+version: 1
 ---
 
 Et bien voilà, vous assistez à la naissance du site !  
