Massive permalink changes

--- a/_posts/2016-05-24-born.md
+++ b/_posts/2016-05-24-born.md
@@ -4,8 +4,10 @@ title: BleRiFa is born!
 lang: en
 ref: 20160524_born
 img: 20160520_start.png
-permalink: /:year/:month/:day/BleRiFa_is_born/
-version: 1
+permalink: /en/:year/:month/BleRiFa_is_born/
+redirect_from:
+  - /2016/05/24/BleRiFa_is_born/
+version: 2
 ---
 
 It seems that this website is up!  
