--- a/_posts/2016-05-24-born_fr.md
+++ b/_posts/2016-05-24-born_fr.md
@@ -4,8 +4,10 @@ title: BleRiFa est né, vive BleRiFa !
 lang: fr
 ref: 20160524_born
 img: 20160520_start.png
-permalink: /:year/:month/:day/BleRiFa_est_ne/
-version: 1
+permalink: /fr/:year/:month/BleRiFa_est_ne/
+redirect_from:
+  - /2016/05/24/BleRiFa_est_ne/
+version: 2
 ---
 
 Et bien voilà, vous assistez à la naissance du site !  
