--- a/_banners/2016-06-11-welcome.md
+++ b/_banners/2016-06-11-welcome.md
@@ -7,4 +7,4 @@ ref: banner_1
 where_display: all #home or all
 ---
 
-Welcome on <a href="http://BleRifa.com">BleRifa</a>! Discover our <a href="http://BleRifa.com/tools/">tools</a>.
+Welcome on <a href="http://BleRifa.com">BleRifa</a>! Discover our <a href="http://BleRifa.com/en/tools/">tools</a>.
